--- a/models/staging/jaffle_shop/_jaffle_shop__sources.yml
+++ b/models/staging/jaffle_shop/_jaffle_shop__sources.yml
@@ -10,6 +10,14 @@ sources:
     loaded_at_field: _etl_loaded_at
     tables:
       - name: customers
+        columns:
+          - name: id
+            tests:
+              - unique
+              - not_null              
         freshness: null
       - name: orders
-    
+        tests:
+          - unique
+          - not_null
+   
