Added descriptions to stg_jaffle_shop__customers and stg_jaffle_shop__orders

--- a/models/staging/jaffle_shop/_jaffle_shop__sources.yml
+++ b/models/staging/jaffle_shop/_jaffle_shop__sources.yml
@@ -17,7 +17,8 @@ sources:
               - not_null              
         freshness: null
       - name: orders
-        tests:
-          - unique
-          - not_null
-   
+        columns:
+          - name: id
+            tests:
+              - unique
+              - not_null
