--- a/models/staging/jaffle_shop/stg_jaffle_shop.yml
+++ b/models/staging/jaffle_shop/stg_jaffle_shop.yml
@@ -2,18 +2,26 @@ version: 2
 
 models:
   - name: stg_jaffle_shop__customers
+    description: one unique customer per row
     columns:
       - name: customer_id
+        description: primary key
         tests:
           - unique
           - not_null
   - name: stg_jaffle_shop__orders
+    description: one order per row
     columns:
       - name: order_id
+        description: primary key
         tests:
           - unique
           - not_null
+          - relationships:
+              field: customer_id
+              to: ref('stg_jaffle_shop__customers')
       - name: status
+        description: "{{ doc('order_status')}}"
         tests:
           - accepted_values:
               values: ['shipped', 'completed', 'return_pending', 'returned', 'placed']
