--- a/models/staging/jaffle_shop/_jaffle_shop__sources.yml
+++ b/models/staging/jaffle_shop/_jaffle_shop__sources.yml
@@ -2,6 +2,7 @@ version: 2
 
 sources:
   - name: jaffle_shop
+    description: Clone of a Postgres application database
     database: raw
     schema: jaffle_shop
     freshness: # default freshness
@@ -10,13 +11,16 @@ sources:
     loaded_at_field: _etl_loaded_at
     tables:
       - name: customers
+        description: Raw customer data
         columns:
           - name: id
+            description: primary key for customers data
             tests:
               - unique
               - not_null              
         freshness: null
       - name: orders
+        description: Raw orders data
         columns:
           - name: id
             tests:
